# pm25_predict

./: .gitignore  CLAUDE.md  requirements.txt
Reproduce/: README.md  REPRODUCTION_PLAN.md  __init__.py
Reproduce/models/: __init__.py  lstm_one_step.py  statistical_models.py
Reproduce/scripts/: __init__.py  compare_models.py  evaluate_lstm.py  predict_model.py  predict_month.py  prepare_data.py  train_lstm.py  train_model.py
Reproduce/utils/: __init__.py  calibration.py  data_utils.py  paths.py  prediction_io.py
data/: processed_beijing.csv
pm25_forecast/: README.md  REPRODUCTION_PLAN.md  __init__.py
pm25_forecast/models/: __init__.py  attention_lstm.py  attention_lstm_seq2seq.py  lstm_one_step.py  statistical_models.py  tree_models.py
pm25_forecast/scripts/: __init__.py  compare_models.py  evaluate_rolling.py  predict_attention_lstm.py  (+10 more)
tests/: test_attention_lstm_seq2seq.py  test_calibration_isotonic.py  test_compare_models.py  test_evaluate_rolling.py  test_feature_enrichment.py  test_lstm_paths.py  test_paths.py  test_predict_model_cli.py  test_prediction_io.py  test_prepare_data_contract.py  test_prepare_data_v2.py  test_statistical_models.py  test_train_model_cli.py  test_tree_models.py
web/: .gitignore  README.md
web/backend/: README.md  pyproject.toml
web/backend/app/: config.py  data_loader.py  main.py  routes.py  schemas.py
web/backend/tests/: conftest.py  test_data_loader.py  test_routes_horizon_metrics.py  test_routes_metrics.py  test_routes_predictions.py  test_routes_windows.py
web/backend/tests/fixtures/: make_fixtures.py
(+40 files in other folders)
